Fix new vertical spacing issues in CSS

--- a/bawg.css
+++ b/bawg.css
@@ -117,7 +117,7 @@ div.photo-box {
     flex-wrap: wrap;
     align-items: center;
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
 }
 div.list-box {
     display: flex;
@@ -133,7 +133,6 @@ span.show-wide {
     display: none;
 }
 div.flex-width {
-    margin-bottom: 10px;
 }
 @media (min-width: 750px) {
     div.flex-width {
